--- a/smartcar/band1/MDK-ARM/band1/band1.build_log.htm
+++ b/smartcar/band1/MDK-ARM/band1/band1.build_log.htm
@@ -21,37 +21,38 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.2.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-d:\demo\band1\MDK-ARM\band1.uvprojx
-Project File Date:  08/10/2024
+D:\code_for_progress\smartcar\band1\MDK-ARM\band1.uvprojx
+Project File Date:  08/17/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'band1'
-compiling stm32f1xx_it.c...
-compiling i2c.c...
-compiling main.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_gpio_ex.c...
-compiling gpio.c...
-compiling tim.c...
+compiling i2c.c...
 compiling stm32f1xx_hal_msp.c...
+compiling gpio.c...
+compiling stm32f1xx_it.c...
+compiling main.c...
+compiling tim.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_cortex.c...
 compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_cortex.c...
 compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_dma.c...
-compiling oledfont.c...
 compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_flash_ex.c...
+compiling oledfont.c...
 compiling system_stm32f1xx.c...
-compiling delay.c...
+compiling follow.c...
 compiling range.c...
+compiling delay.c...
 compiling stm32f1xx_hal_tim_ex.c...
 compiling oled.c...
-compiling stm32f1xx_hal_tim.c...
 compiling stm32f1xx_hal_i2c.c...
+compiling stm32f1xx_hal_tim.c...
 linking...
 Program Size: Code=14654 RO-data=2466 RW-data=36 ZI-data=1892  
 FromELF: creating hex file...
