初步写好控制电机转速的函数，接下来是写出测速函数

--- a/smartcar/band1/MDK-ARM/band1/band1.build_log.htm
+++ b/smartcar/band1/MDK-ARM/band1/band1.build_log.htm
@@ -21,43 +21,48 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.2.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-d:\code_for_progress\smartcar\band1\MDK-ARM\band1.uvprojx
-Project File Date:  08/17/2024
+D:\code_for_progress\smartcar\band1\MDK-ARM\band1.uvprojx
+Project File Date:  08/19/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'band1'
-compiling i2c.c...
+compiling gpio.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_it.c...
 compiling main.c...
+compiling i2c.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling tim.c...
 compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_msp.c...
-compiling tim.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_it.c...
-compiling gpio.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_flash_ex.c...
 compiling oledfont.c...
 compiling system_stm32f1xx.c...
 compiling pid.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_flash_ex.c...
 compiling range.c...
-compiling delay.c...
+../Peripheral/motor.c(3): error: unknown type name 'uint8_t'
+    3 | void MOTOR_Speed(uint8_t left_speed, uint8_t right_speed)
+      |                  ^
+../Peripheral/motor.c(3): error: unknown type name 'uint8_t'
+    3 | void MOTOR_Speed(uint8_t left_speed, uint8_t right_speed)
+      |                                      ^
+2 errors generated.
+compiling motor.c...
 compiling follow.c...
+compiling delay.c...
 compiling oled.c...
 compiling stm32f1xx_hal_tim_ex.c...
 compiling stm32f1xx_hal_i2c.c...
 compiling stm32f1xx_hal_tim.c...
-linking...
-Program Size: Code=14674 RO-data=2466 RW-data=36 ZI-data=1892  
-FromELF: creating hex file...
-"band1\band1.axf" - 0 Error(s), 0 Warning(s).
+"band1\band1.axf" - 2 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -81,6 +86,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.0.0
       Include file:  CMSIS/Core/Include/tz_context.h
+Target not created.
 Build Time Elapsed:  00:00:02
 </pre>
 </body>
