--- a/smartcar/band1/MDK-ARM/band1/band1.build_log.htm
+++ b/smartcar/band1/MDK-ARM/band1/band1.build_log.htm
@@ -27,18 +27,19 @@ Project File Date:  08/21/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'band1'
-compiling i2c.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling tim.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling main.c...
-compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_it.c...
 compiling gpio.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+assembling startup_stm32f103xe.s...
+compiling main.c...
+compiling i2c.c...
+compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_it.c...
 compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling tim.c...
+compiling stm32f1xx_hal_pwr.c...
 compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_flash.c...
@@ -50,14 +51,14 @@ compiling system_stm32f1xx.c...
 compiling delay.c...
 compiling follow.c...
 compiling range.c...
-compiling motor.c...
 compiling encoder.c...
+compiling motor.c...
 compiling stm32f1xx_hal_tim_ex.c...
 compiling oled.c...
 compiling stm32f1xx_hal_i2c.c...
 compiling stm32f1xx_hal_tim.c...
 linking...
-Program Size: Code=17610 RO-data=2466 RW-data=36 ZI-data=2180  
+Program Size: Code=17614 RO-data=2466 RW-data=36 ZI-data=2180  
 FromELF: creating hex file...
 "band1\band1.axf" - 0 Error(s), 0 Warning(s).
 
