--- a/smartcar/band1/MDK-ARM/band1/band1.build_log.htm
+++ b/smartcar/band1/MDK-ARM/band1/band1.build_log.htm
@@ -22,42 +22,45 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 d:\code_for_progress\smartcar\band1\MDK-ARM\band1.uvprojx
-Project File Date:  08/21/2024
+Project File Date:  08/24/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'band1'
-compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_it.c...
-compiling gpio.c...
-compiling tim.c...
-compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling usart.c...
+compiling dma.c...
 compiling i2c.c...
+compiling gpio.c...
+compiling stm32f1xx_hal_rcc_ex.c...
 compiling main.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling tim.c...
+compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_cortex.c...
 compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_flash_ex.c...
 compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_exti.c...
 compiling oledfont.c...
-compiling system_stm32f1xx.c...
 compiling pid.c...
+compiling system_stm32f1xx.c...
 compiling delay.c...
 compiling follow.c...
 compiling range.c...
-compiling encoder.c...
 compiling motor.c...
+compiling encoder.c...
 compiling stm32f1xx_hal_tim_ex.c...
 compiling oled.c...
-compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_uart.c...
 compiling stm32f1xx_hal_i2c.c...
+compiling stm32f1xx_hal_tim.c...
 linking...
-Program Size: Code=18170 RO-data=2466 RW-data=36 ZI-data=2196  
+Program Size: Code=21260 RO-data=2468 RW-data=40 ZI-data=1728  
 FromELF: creating hex file...
 "band1\band1.axf" - 0 Error(s), 0 Warning(s).
 
@@ -83,7 +86,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.0.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
