提交一次，以修改策略

--- a/smartcar/band1/MDK-ARM/band1/band1.build_log.htm
+++ b/smartcar/band1/MDK-ARM/band1/band1.build_log.htm
@@ -27,48 +27,52 @@ Project File Date:  08/30/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'band1'
-compiling dma.c...
 compiling gpio.c...
-compiling main.c...
-compiling i2c.c...
-compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal.c...
+compiling dma.c...
 compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_msp.c...
 compiling stm32f1xx_it.c...
 compiling usart.c...
-compiling stm32f1xx_hal.c...
+compiling i2c.c...
 compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_gpio.c...
 compiling tim.c...
 compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_dma.c...
+../Core/Src/main.c(229): warning: implicit conversion from 'int' to 'int8_t' (aka 'signed char') changes value from 500 to -12 [-Wconstant-conversion]
+  229 |       MOTOR_Speed(7,500);
+      |       ~~~~~~~~~~~   ^~~
+1 warning generated.
+compiling main.c...
 compiling stm32f1xx_hal_pwr.c...
 compiling stm32f1xx_hal_cortex.c...
 compiling oledfont.c...
-compiling system_stm32f1xx.c...
 compiling stm32f1xx_hal_exti.c...
+compiling system_stm32f1xx.c...
 compiling stm32f1xx_hal_flash.c...
-compiling range.c...
 compiling stm32f1xx_hal_flash_ex.c...
+compiling range.c...
+compiling pid.c...
 compiling delay.c...
 compiling follow.c...
-compiling pid.c...
-compiling encoder.c...
 compiling motor.c...
-compiling oled.c...
 compiling stm32f1xx_hal_tim_ex.c...
-compiling sg90.c...
+compiling oled.c...
+compiling encoder.c...
 ../Peripheral/redirect.c(8): warning: 'vsnprintf' size argument is too large; destination buffer has size 100, but size argument is 101 [-Wfortify-source]
     8 |     len=vsnprintf((char*)printf_temp,sizeof(printf_temp)+1,(char*)format,args);
       |         ^
 1 warning generated.
 compiling redirect.c...
+compiling sg90.c...
 compiling stm32f1xx_hal_uart.c...
 compiling stm32f1xx_hal_i2c.c...
 compiling stm32f1xx_hal_tim.c...
 linking...
-Program Size: Code=24782 RO-data=2466 RW-data=40 ZI-data=1824  
+Program Size: Code=21706 RO-data=410 RW-data=40 ZI-data=1808  
 FromELF: creating hex file...
-"band1\band1.axf" - 0 Error(s), 1 Warning(s).
+"band1\band1.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -92,7 +96,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.0.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
